Site response test

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <section class="section-three">
-        <p class="order-online">Order Online Now</p>
+        <p class="order-online">Order Online Now!</p>
         <h3>Our Specility Cuisine</h3>
         <div class="meal-time">
             <a href="#">Breakfast</a>
