--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="orange-phone"></div>
-        <p>Call Now</p>
+        <p>Call Now:</p>
         <p>+12345 678 910</p>
         <div class="food-video">
             <div class="place-holder"></div>
